added css to index2

--- a/index2.html
+++ b/index2.html
@@ -5,9 +5,9 @@
 	<meta name="viewport" content="width=device-width" />
 	<title>Matthew McDonald</title>
 	<!-- <link rel="stylesheet" type="text/css" href="css.css"> -->
-	<link rel="stylesheet" type="text/css" href="css/max360.css" media="screen and (max-width: 632px)">
-	<link rel="stylesheet" type="text/css" href="css/max768.css" media="screen and (min-width: 633px) and (max-width: 768px)">
-	<link rel="stylesheet" type="text/css" href="css/min1280.css" media="screen and (min-width:769px)">
+	<link rel="stylesheet" type="text/css" href="index2_css/max360.css" media="screen and (max-width: 632px)">
+	<link rel="stylesheet" type="text/css" href="index2_css/max768.css" media="screen and (min-width: 633px) and (max-width: 768px)">
+	<link rel="stylesheet" type="text/css" href="index2_css/min1280.css" media="screen and (min-width:769px)">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
